Se define el layout de la página

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="row">
+    <div class="container">
 
         <nav id="navbar">
             <header>CSS Grid</header>
